# backend/controllers/UserController.js
@@ -87,178 +87,3 @@ export const loginUser = async(req, res) => {
         })
     }
 };
-
-// Convert address to latitude and longitude
-export const convertAddressToLocation = async(address) => {
-    return new Promise(function(resolve, reject) {
-        geocode({
-            address: address.street,
-            postal: address.postcode,
-            countryCode: address.country,
-            authentication
-        }).then((response) => {
-            resolve(response.candidates[0].location);
-        });
-    });
-}
-
-export const searchByMatchingAttributes = async(providers, jobId, fromAddress) => {
-    var key, filteredProviders, expr, i, index = 0;
-
-    var currentProviders = providers;
-    var attributes = await getMatchingAttributesByProviderCodeAndJobId(jobId);
-    var sortAttributes = attributes[0]["matchingAttributes"];
-
-    var keys = sortAttributes.map(a => a.name);
-    const values = sortAttributes.map(a => a.value);
-    const operators = sortAttributes.map(a => a.operator)
-
-    var location = await convertAddressToLocation(fromAddress);
-    var currentCoord = { lat: location.y, lng: location.x }
-    const coords = providers.map(a => a.location);
-
-    var distFromCurrent = function(coord) {
-        return { coord: coord, dist: getDistance(currentCoord, coord) };
-    }
-    var distances = coords.map(distFromCurrent);
-
-    for (const operator of operators) {
-        expr = operator.toLowerCase();
-        key = keys[index];
-        switch (expr) {
-            case 'eq':
-                if (keys[index].toLowerCase() == 'location') {
-                    i = -1;
-                    filteredProviders = currentProviders.filter(provider => {
-                        i++;
-                        return provider.hasOwnProperty(key) && distances[index].dist == parseInt(values[index])
-                    })
-                } else {
-                    filteredProviders = currentProviders.filter(provider => {
-                        return provider.hasOwnProperty(key) && parseInt(provider[key]) == parseInt(values[index])
-                    })
-                }
-                break;
-            case 'gt':
-                if (keys[index].toLowerCase() == 'location') {
-                    i = -1;
-                    filteredProviders = currentProviders.filter(provider => {
-                        i++;
-                        return provider.hasOwnProperty(key) && distances[index].dist > parseInt(values[index])
-                    })
-                } else {
-                    filteredProviders = currentProviders.filter(provider => {
-                        return provider.hasOwnProperty(key) && parseInt(provider[key]) > parseInt(values[index])
-                    })
-                }
-                break;
-            case 'ge':
-                if (keys[index].toLowerCase() == 'location') {
-                    i = -1;
-                    filteredProviders = currentProviders.filter(provider => {
-                        i++;
-                        return provider.hasOwnProperty(key) && distances[index].dist >= parseInt(values[index])
-                    })
-                } else {
-                    filteredProviders = currentProviders.filter(provider => {
-                        return provider.hasOwnProperty(key) && parseInt(provider[key]) >= parseInt(values[index])
-                    })
-                }
-                break;
-            case 'lt':
-                if (keys[index].toLowerCase() == 'location') {
-                    i = -1;
-                    filteredProviders = currentProviders.filter(provider => {
-                        i++;
-                        return provider.hasOwnProperty(key) && distances[i].dist < parseInt(values[index])
-                    })
-                } else {
-                    filteredProviders = currentProviders.filter(provider => {
-                        return provider.hasOwnProperty(key) && parseInt(provider[key]) < parseInt(values[index])
-                    })
-                }
-                break;
-            case 'le':
-                if (keys[index].toLowerCase() == 'location') {
-                    i = -1;
-                    filteredProviders = currentProviders.filter(provider => {
-                        i++;
-                        return provider.hasOwnProperty(key) && distances[index].dist <= parseInt(values[index])
-                    })
-                } else {
-                    filteredProviders = currentProviders.filter(provider => {
-                        return provider.hasOwnProperty(key) && parseInt(provider[key]) <= parseInt(values[index])
-                    })
-                }
-                break;
-        }
-        index++;
-        currentProviders = filteredProviders;
-    }
-    return filteredProviders;
-}
-
-export const getMatchingAttributesByProviderCodeAndJobId = (jobId) => {
-    var url = `${providerBaseURL}/config/${jobId}`;
-
-    var options = {
-        method: 'GET',
-        headers: {
-            'User-Agent': 'Request-Promise'
-        },
-        uri: url,
-        json: true // Automatically stringifies the body to JSON
-    };
-
-    return new Promise(function(resolve, reject) {
-        rp(options)
-            .then(function(attributes) {
-                resolve(attributes);
-            })
-            .catch(function(err) {
-                console.error(err);
-                reject(err);
-            });
-    });
-}
-
-export const getProvidersByPostCodeAndJobId = async(country, jobId) => {
-    var url = `${providerBaseURL}/search`;
-
-    var payload = {
-        "country": country,
-        "jobId": jobId
-    };
-
-    var options = {
-        method: 'POST',
-        uri: url,
-        body: payload,
-        json: true // Automatically stringifies the body to JSON
-    };
-
-    return new Promise(function(resolve, reject) {
-        rp(options)
-            .then(function(providers) {
-                resolve(providers);
-            })
-            .catch(function(err) {
-                console.error(err);
-                reject(err);
-            });
-    });
-}
-
-// Save the booking request into crowdDb
-export const createBooking = async(booking) => {
-    return new Promise(function(resolve, reject) {
-        let newBooking = new Booking(booking)
-        newBooking.save()
-            .then(booking => {
-                resolve(booking)
-            })
-            .catch(err => {
-                reject(err);
-            });
-    });
-}
